<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adobe_captivate"
            android:textColor="@color/captivate_text_color"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="110dp"
            android:text="@string/setting"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"
            android:background="@color/button_color"/>

        <Button
            android:id="@+id/stop_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_record"
            android:textSize="12sp"
            android:layout_alignTop="@+id/setting"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/button_color"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/count_text"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="80sp"
        android:visibility="visible"
        android:layout_centerInParent="true"/>

</RelativeLayout>
